implement wifi status
